--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,11 @@
 {
-	"description": "The CodeIgniter framework",
-	"name": "codeigniter/framework",
+	"description": "The Base Application of Artic Project",
+	"name": "artic/business",
 	"type": "project",
-	"homepage": "https://codeigniter.com",
+	"homepage": "https://codeback.com",
 	"license": "MIT",
 	"support": {
-		"forum": "http://forum.codeigniter.com/",
-		"wiki": "https://github.com/bcit-ci/CodeIgniter/wiki",
-		"slack": "https://codeigniterchat.slack.com",
-		"source": "https://github.com/bcit-ci/CodeIgniter"
+		"source": "https://github.com/artic-project/-business"
 	},
 	"require": {
 		"php": ">=5.3.7",
